fix character icon button  not showing up after image click

--- a/src/index.css
+++ b/src/index.css
@@ -153,8 +153,6 @@ button:hover {
     width: 100%;
     height: 20px;
     border-radius: 3px;
-    visibility: hidden;
-    opacity: 0;
     transition: opacity 250ms ease-in;
 }
 
